--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title></title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login</title>
 </head>
 <body>
-	<div style="background:black; color:white; padding:10px; font-size:20px">
-	<h1 style="text-align:center">PRADEEP</h1>
-	<div>
+  <h1>Login</h1>
+  <form id="loginForm">
+    <input type="text" id="username" placeholder="Username">
+    <input type="password" id="password" placeholder="Password">
+    <button type="submit">Login</button>
+  </form>
+  <script src="login.js"></script>
 </body>
 </html>
