--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Login</h1>
   <form id="loginForm">
-    <input type="text" id="username" placeholder="Username">
+    <input type="text" id="username" placeholder="Username"><"br">
     <input type="password" id="password" placeholder="Password">
     <button type="submit">Login</button>
   </form>
